2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/jar.h, kaffe/kaffevm/jar.c (openJarFile): Removed.

	* libraries/clib/zip/ZipFile.c (java_util_zip_ZipFile_openZipFile0),
	kaffe/kaffevm/findInJar.c (findClassInJar),
	kaffe/kaffeh/support.c (kaffeh_findClass): Use zzip_opendir directly.

2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Updated.

2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_PROG_CC_C99): Ask for a C99 compiler, so that useful
	ISO C99 macros like isnan and signbit are defined in math.h.
	
	* kaffe/kaffevm/fp.c (doubleDivide): Return KAFFE_JDOUBLE_POS_INF or
	KAFFE_JDOUBLE_NEG_INF depending on the signbit of input.
	(doubleToLong, longToDouble): Removed unused functions.
	
	* kaffe/kaffevm/baseClasses.c (initBaseClasses): Initialize KAFFE_JDOUBLE_NEG_INF
	and KAFFE_JDOUBLE_POS_INF.

	* kaffe/kaffevm/baseClasses.h (KAFFE_JDOUBLE_POS_INF, KAFFE_JDOUBLE_NEG_INF): 
	New fields used to cache Double.POSITIVE_INFINITY and Double.NEGATIVE_INFINITY.
	
2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/fp.c (floatToInt, doubleToLong): Made static.

	* kaffe/kaffevm/fp.h (doubleToLong, floatToInt): Removed.

2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/fp.c (intToFloat):  Simplified collapsing of NaNs.
	Made function static.

	* kaffe/kaffevm/fp.h (FNANBITS, intToFloat): Removed.

2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/fp.c (floatAdd, floatSubtract, floatMultiply)
	(floatDivide):  Use KAFFE_JFLOAT_NAN.

	* kaffe/kaffevm/soft.c (soft_cvtdf):  Use KAFFE_JFLOAT_NAN. Documented.

	* kaffe/kaffevm/baseClasses.c (initBaseClasses): Initialize KAFFE_JFLOAT_NAN.

	* kaffe/kaffevm/baseClasses.h (KAFFE_JFLOAT_NAN): New field caching
	java.lang.Float.NaN.

2008-02-15  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/fp.h (DNANBITS, longToDouble): Removed.

	* kaffe/kaffevm/fp.c (longToDouble): Simplified collapsing of NaNs.
	Made function static.
